# xp2gdl90

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  Log.txt  README.md  SECURITY.md  build.sh  build_all.py  build_linux.sh  build_mac.sh  build_win.bat  build_windows.bat  dev-setup.sh  install.sh  linux_exports.txt  mac_exports.txt  test_cross_platform.py  win_exports.def  xp2gdl90.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/codeql/: codeql-config.yml
.github/security/: dependency-check-suppressions.xml  trufflehog-excludes.txt
.github/workflows/: build.yml  coverage.yml  documentation.yml  performance.yml  security.yml  version-bump.yml
benchmarks/: CMakeLists.txt  bench_flight_data.cpp  bench_full_workflow.cpp  bench_gdl90_encoding.cpp  bench_network_layer.cpp
docs/: GDL 90_Extended_Specification.txt  GDL90.txt  GDL90_Public_ICD_RevA.txt  WORKFLOW_TROUBLESHOOTING.md
gdl90tests/: gdl90_decoder.py  gdl90_format_tests.py  gdl90_integration_test.py  gdl90_network_capture.py  gdl90_unit_tests.py  test_edge_cases.py  test_gdl90.sh  test_gdl90_compliance.py
include/xp2gdl90/: broadcast_clock.h  config.h  foreflight_encoder.h  foreflight_protocol.h  gdl90_encoder.h  msfs_bridge.h  protocol_utils.h  settings.h  settings_ui.h  simconnect_compat.h  simple_json.h  traffic_support.h  udp_broadcaster.h  udp_receiver.h
py/: main.py
reciever/: REALTIME_CAPTURE_README.md  TEST_README.md  flight_data.json  gdl90_decoder.py  mock_gdl90_sender.py  realtime_gdl90_capture.py  run_gdl90_tests.py  test_cases.json  test_data_generator.py  test_pipeline.py  test_report.json  test_udp_capture.py  verify_gdl90.py
scripts/: bump_version.py  coverage.sh  release_manager.py  test-workflow.sh
src/: broadcast_clock.cpp  config.cpp  config.h  encoder_support.cpp  encoder_support.h  foreflight_encoder.cpp  foreflight_protocol.cpp  gdl90_encoder.cpp  gdl90_encoder.h  main.cpp  msfs_bridge.cpp  msfs_main.cpp  protocol_utils.cpp  settings.cpp  settings_ui.cpp  simple_json.cpp  traffic_support.cpp  udp_broadcaster.cpp  udp_broadcaster.h  udp_receiver.cpp  xp2gdl90.cpp
src/imgui/: imgui_impl_xplane.cpp  imgui_impl_xplane.h
src/imgwindow/: img_font_atlas.cpp  img_font_atlas.h  img_window.cpp  img_window.h  system_gl.h  xp_img_window.cpp  xp_img_window.h
src/ui/: ConfigWindow.cpp  ConfigWindow.h  ImGuiManager.cpp  ImGuiManager.h  StatusWindow.cpp  StatusWindow.h
tests/: CMakeLists.txt  frame_test_utils.h  test_broadcast_clock.cpp  test_config.cpp  test_foreflight_encoder.cpp  test_foreflight_protocol.cpp  test_gdl90_encoder.cpp  test_harness.h  test_main.cpp  test_msfs_bridge.cpp  test_protocol_utils.cpp  test_settings.cpp  test_settings_ui.cpp  test_simple_json.cpp  test_traffic_support.cpp  test_udp_broadcaster.cpp
tests/integration/: test_full_workflow.cpp
tests/mocks/: XPLMDataAccessMock.cpp  XPLMMock.cpp  XPLMMock.h  XPLMProcessingMock.cpp
tests/unit/: test_flight_data.cpp  test_gdl90_encoding.cpp  test_network_layer.cpp  test_plugin_lifecycle.cpp
